# rosbag2-release

./: 0001-Disable-sanitizers-in-RPM-build.patch  0001-Override-FetchContent-flag-to-make-sure-that-content.patch  0001-add-ros1-environment-to-debian-build-1.patch  0001-add-ros1-environment-to-debian-build-2.patch  0001-add-ros1-environment-to-debian-build-3.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  galactic.ignored  lz4_cmake_module-extras.cmake  package.xml  patches.conf  pytest.ini  releaser_history.json  rpm.store  setup.py  tracks.yaml
.github/workflows/: lint.yml  test.yml
action/: ComplexActionIdl.action
cmake/Modules/: Findlz4.cmake
debian/: changelog  control  control.em  copyright  gbp.conf  rules
docs/: message_definition_encoding.md
docs/design/: repeat_transient_local_messages_during_recording.md  rosbag2_record_replay_action.md  statistics_about_lost_and_recorded_messages.md
include/msg_utils/: message_producer.hpp
include/rosbag2_compression/: sequential_compression_writer.hpp
include/rosbag2_cpp/: reindexer.hpp
include/rosbag2_storage/: storage_options.hpp
include/rosbag2_storage_sqlite3/: sqlite_storage.hpp
include/rosbag2_test_common/: action_server_manager.hpp  publication_manager.hpp  service_manager.hpp
include/rosbag2_transport/: play_options.hpp  player.hpp  player_action_client.hpp  readers_manager.hpp  topic_filter.hpp
liblz4_vendor/: CHANGELOG.rst  package.xml
lz4_cmake_module/: CHANGELOG.rst  CMakeLists.txt  package.xml
lz4_cmake_module/cmake/Modules/: Findlz4.cmake
mcap_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
mcap_vendor/patches/: 0001-fix-gcc15.patch
resources/: static_topics_list.yaml
ros2bag/: CHANGELOG.rst  package.xml  setup.py
ros2bag/api/: __init__.py
ros2bag/test/: test_api.py  test_record.py  test_record_qos_profiles.py
ros2bag/verb/: convert.py  record.py
rosbag2/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_compression/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_compression_zstd/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_examples/rosbag2_examples_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_examples/rosbag2_examples_py/: CHANGELOG.rst  package.xml  setup.py
rosbag2_examples_py/: data_generator_executable.py  data_generator_node.py
rosbag2_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_interfaces/msg/: MessagesLostEvent.msg  MessagesLostEventTopicStat.msg
rosbag2_interfaces/srv/: IsDiscoveryRunning.srv  Resume.srv  SplitBagfile.srv  StartDiscovery.srv  Stop.srv  StopDiscovery.srv
rosbag2_performance/rosbag2_performance_benchmarking/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rosbag2_py/: CHANGELOG.rst  CMakeLists.txt  _message_definitions.pyi  _reader.pyi  _storage.pyi  _transport.pyi  package.xml
rosbag2_storage/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_storage_default_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_storage_mcap/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_storage_mcap_testdata/: CHANGELOG.rst  package.xml
rosbag2_storage_sqlite3/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_test_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_test_msgdefs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_test_msgdefs/action/: ComplexActionMsg.action
rosbag2_test_msgdefs/msg/: ComplexWithRelativeDep.idl
rosbag2_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag2_transport/: CHANGELOG.rst  CMakeLists.txt  package.xml
rpm/: ros-galactic-ros2bag.spec  ros-galactic-rosbag2-compression-zstd.spec  ros-galactic-rosbag2-compression.spec  ros-galactic-rosbag2-cpp.spec  ros-galactic-rosbag2-interfaces.spec  ros-galactic-rosbag2-py.spec  ros-galactic-rosbag2-storage-default-plugins.spec  ros-galactic-rosbag2-storage.spec  ros-galactic-rosbag2-test-common.spec  ros-galactic-rosbag2-tests.spec  ros-galactic-rosbag2-transport.spec  ros-galactic-rosbag2.spec  ros-galactic-shared-queues-vendor.spec  ros-galactic-sqlite3-vendor.spec  ros-galactic-zstd-vendor.spec  ros-humble-mcap-vendor.spec  ros-humble-ros2bag.spec  ros-humble-rosbag2-compression-zstd.spec  ros-humble-rosbag2-compression.spec  ros-humble-rosbag2-cpp.spec  ros-humble-rosbag2-interfaces.spec  ros-humble-rosbag2-performance-benchmarking.spec  ros-humble-rosbag2-py.spec  ros-humble-rosbag2-storage-default-plugins.spec  ros-humble-rosbag2-storage-mcap-testdata.spec  ros-humble-rosbag2-storage-mcap.spec  ros-humble-rosbag2-storage.spec  ros-humble-rosbag2-test-common.spec  ros-humble-rosbag2-tests.spec  ros-humble-rosbag2-transport.spec  ros-humble-rosbag2.spec  ros-humble-shared-queues-vendor.spec  ros-humble-sqlite3-vendor.spec  ros-humble-zstd-vendor.spec  ros-iron-mcap-vendor.spec  ros-iron-ros2bag.spec  ros-iron-rosbag2-compression-zstd.spec  ros-iron-rosbag2-compression.spec  ros-iron-rosbag2-cpp.spec  ros-iron-rosbag2-examples-cpp.spec  (+100 more)
shared_queues_vendor/: CHANGELOG.rst  package.xml
sqlite3_vendor/: CHANGELOG.rst  package.xml
src/: benchmark_publishers.cpp  mcap_storage.cpp  writer_benchmark.cpp
srv/: Record.srv
test/: test_message_definitions.py  test_recorder_args_parser.py  test_sequential_reader.py  test_sequential_reader_multiple_files.py  test_transport.py
zstd_cmake_module/: CMakeLists.txt  package.xml  zstd_cmake_module-extras.cmake
zstd_cmake_module/cmake/Modules/: Findzstd.cmake
zstd_vendor/: CHANGELOG.rst  package.xml
(+259 files in other folders)
