<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lz4_cmake_module</name>
  <version>0.33.1</version>
  <description>LZ4 compression cmake module package</description>
  <maintainer email="michael.orlov@apex.ai">Michael Orlov</maintainer>
  <maintainer email="me@emersonknapp.com">Emerson Knapp</maintainer>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->

  <url type="website">https://github.com/lz4/lz4/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>liblz4-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
